--- a/index.html
+++ b/index.html
@@ -3,31 +3,23 @@
 
 <head>
   <meta charset="UTF-8" />
+  <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="description"
-    content="DGS Creative LLC - Showcasing bespoke web development skills in computer graphics, blockchain, AI, and more." />
-  <meta name="keywords"
-    content="web development, bespoke websites, computer graphics, blockchain, AI, machine learning, Three.js, GLSL, WebGL" />
-  <meta name="author" content="DGS Creative LLC" />
+  <meta name="theme-color" content="#3182ce" />
+  <link rel="apple-touch-icon" href="/apple-touch-icon.png" />
+  <link rel="manifest" href="/manifest.json" />
+  <!-- Preconnect to domains you'll load resources from -->
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <!-- The title and meta tags will be managed by React Helmet -->
   <title>DGS Creative LLC</title>
-  <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@400;500;600;700&display=swap"
-    rel="stylesheet" />
-  <meta property="og:title" content="DGS Creative LLC" />
-  <meta property="og:description"
-    content="Showcasing bespoke web development skills in computer graphics, blockchain, AI, and more." />
-  <meta property="og:image" content="/placeholder-social-image.jpg" />
-  <meta property="og:url" content="https://www.dgscreative.com" />
-  <meta property="og:type" content="website" />
-  <meta name="twitter:card" content="summary_large_image" />
-  <meta name="twitter:title" content="DGS Creative LLC" />
-  <meta name="twitter:description"
-    content="Showcasing bespoke web development skills in computer graphics, blockchain, AI, and more." />
-  <meta name="twitter:image" content="/placeholder-social-image.jpg" />
+  <meta name="description" content="Bespoke web development and digital solutions for businesses" />
 </head>
 
-<body class="bg-secondary text-primary dark:bg-primary dark:text-secondary">
+<body>
   <div id="root"></div>
   <script type="module" src="/src/main.jsx"></script>
+  <noscript>You need to enable JavaScript to run this app.</noscript>
 </body>
 
 </html>
