--- a/index.html
+++ b/index.html
@@ -3,10 +3,11 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+  <link rel="icon" type="image/svg+xml" href="/images/favicon_io/mural.svg" />
+  <link rel="icon" type="image/x-icon" href="/images/favicon_io/favicon.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="theme-color" content="#3182ce" />
-  <link rel="apple-touch-icon" href="/apple-touch-icon.png" />
+  <link rel="apple-touch-icon" href="/images/favicon_io/apple-touch-icon.png" />
   <link rel="manifest" href="/manifest.json" />
   <!-- Preconnect to domains you'll load resources from -->
   <link rel="preconnect" href="https://fonts.googleapis.com" />
