--- a/index.html
+++ b/index.html
@@ -9,6 +9,26 @@
   <meta name="theme-color" content="#3182ce" />
   <link rel="apple-touch-icon" href="/images/favicon_io/apple-touch-icon.png" />
   <link rel="manifest" href="/manifest.json" />
+  <link rel="canonical" href="https://www.dgs-creative.com" />
+
+  <!-- Open Graph / Social Media Meta Tags -->
+  <meta property="og:url" content="https://www.dgs-creative.com" />
+  <meta property="og:type" content="website" />
+  <meta property="og:title" content="DGS Creative LLC | Web Development" />
+  <meta property="og:description" content="Bespoke web development and digital solutions" />
+  <meta property="og:image" content="https://www.dgs-creative.com/images/favicon_io/android-chrome-512x512.png" />
+
+  <!-- Twitter Card Meta Tags -->
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:creator" content="@DavidGailSmith" />
+
+  <!-- Security Headers -->
+  <meta http-equiv="Content-Security-Policy" content="frame-ancestors 'self'" />
+  <meta http-equiv="X-Frame-Options" content="SAMEORIGIN" />
+  <meta http-equiv="Referrer-Policy" content="strict-origin-when-cross-origin" />
+  <meta name="format-detection" content="telephone=no" />
+  <meta name="apple-mobile-web-app-capable" content="yes" />
+
   <!-- Preconnect to domains you'll load resources from -->
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
